--- a/Danish/main/Updater.apk/res/values-da/strings.xml
+++ b/Danish/main/Updater.apk/res/values-da/strings.xml
@@ -1,22 +1,22 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="about_device">Om</string>
+  <string name="about_device">Om enhed</string>
   <string name="active_xiaomi_account">Aktiv</string>
-  <string name="active_xiaomi_account_msg">"Gå til MIUI forum for at aktivere Xiaommi konto:"</string>
+  <string name="active_xiaomi_account_msg">"Gå til MIUI forum for at aktivere Xiaomi konto:"</string>
   <string name="active_xiaomi_account_title">Aktiver Xiaomi konto</string>
-  <string name="app_name">System opdatering</string>
-  <string name="apply_buddy_update_info_message">Tryk Anvend, telefonen vil genstarte for at installere opdateringer</string>
-  <string name="apply_existing_update_md5error_title">MD5 ikke identiske.</string>
+  <string name="app_name">System Opdatering</string>
+  <string name="apply_buddy_update_info_message">Tryk Opdater nu, telefonen vil genstarte for at installere opdateringer</string>
+  <string name="apply_existing_update_md5error_title">MD5 signatur matcher ikke</string>
   <string name="apply_later_button_text">Opdater senere</string>
   <string name="apply_now_button_text">Opdater nu</string>
   <string name="apply_unable_to_reboot_toast">Kan ikke genstarte til recovery</string>
   <string name="apply_update_dialog_cancel_button">Annuller</string>
-  <string name="apply_update_dialog_update_button">Fortsæt</string>
+  <string name="apply_update_dialog_update_button">Opdater</string>
   <string name="apply_update_fail">System opdatering mislykkedes!</string>
-  <string name="apply_update_timer">Opdatering fuldført, telefonen vil genstarte %d sekunder senere</string>
+  <string name="apply_update_timer">Opdatering fuldført, telefonen vil genstarte om %d sekunder</string>
   <string name="apply_upload_info_message">Tryk på Opdater nu, vil automatisk genstarte telefonen for at installere opdateringen</string>
-  <string name="apply_upload_info_message_manually">Luk venligst ned, start op i recovery manuelt og installer opdatering fra SD-kortet fra %s. Hvis du vil lave backup, gør det først og vend tilbage til System Opdatering.</string>
-  <string name="applying_rom_message">Installerer ROM</string>
+  <string name="apply_upload_info_message_manually">Luk venligst ned, start op i recovery manuelt og installer opdatering fra SD-kortet fra %s. Hvis du vil lave backup, gør det først og vend derefter tilbage til System Opdatering.</string>
+  <string name="applying_rom_message">Installerer opdatering</string>
   <string name="applying_update">Opdaterer...%s</string>
   <string name="best_update">2. Bedste opdatering</string>
   <string name="boot_recovery">Genstart til recovery</string>
@@ -26,6 +26,13 @@
   <string name="check_update_when_wifi_available">Søg kun efter opdateringer når Wi-Fi er forbundet</string>
   <string name="checking_for_updates">Søger efter opdateringer...</string>
   <string name="choose_recommend">Vælg om den skal anbefales eller ej</string>
+  <string name="comment_invalid">Vælg stjerner for at give en bedømmelse</string>
+  <string name="comment_publish">Send</string>
+  <string name="comment_sending">Sender kommentar...</string>
+  <string name="comment_upload_failed">Send kommentar mislykkedes</string>
+  <string name="comment_upload_hint">Tak for dine kommentarer</string>
+  <string name="comment_upload_not_logined">Log ind først, før kommentarer sendes</string>
+  <string name="comment_upload_success">Kommentar sendt!</string>
   <string name="confirm_download_cancelation_dialog_message">Er du sikker på at du vil annullere downloaden?</string>
   <string name="copy_install_log">Kopier installations log</string>
   <string name="current_version_text">Version i brug： </string>
@@ -38,117 +45,128 @@
   <string name="download_ota_rom">Download OTA (%s)</string>
   <string name="download_whole_rom">Download komplet ROM (%s)</string>
   <string name="downloading_description">Downloader...</string>
+  <string name="edit_comment">Tilføj kommentar</string>
+  <string name="edit_comment_title">Rediger kommentar</string>
+  <string name="edit_text_default">Skriv en kommentar</string>
   <string name="emegency_build">Build:</string>
-  <string name="exception_while_downloading">Fejl under hentning af opdatering</string>
+  <string name="exception_while_downloading">Fejl under download af opdatering</string>
   <string name="expect">4. Forventninger</string>
   <string name="experimental_build">Eksperimental Build</string>
-  <string name="file_not_found_error_message">Opdateringsfil ikke fundet</string>
+  <string name="file_not_found_error_message">Opdateringsfil ikke fundet på server</string>
   <string name="finish">Afslut</string>
   <string name="finish_download">Download fuldført</string>
+  <string name="fourgrid_hint_text">Tak for du benytter udvikler build af MIUI. Fortæl os venligst hvad du mener, og hjælp os med at forbedre MIUI til en bedre Android ROM!</string>
+  <string name="fourgrid_no_notificaiont">"Vis ikke i status bar"</string>
+  <string name="fourgrid_notificaiont">Vis i status bar</string>
   <string name="get_update_error">Kunne ikke hente information om opdatering</string>
   <string name="install_email">Installer E-mail app</string>
   <string name="install_file_explorer">Installer Fil Håndtering</string>
   <string name="install_qq">Installer QQ app</string>
-  <string name="install_rom_from_sd">Installer fra SD</string>
-  <string name="install_sina">Installer Sina app</string>
+  <string name="install_rom_from_sd">Vælg installationspakke</string>
   <string name="install_whole_rom">Det anbefales at downloade og installere den fulde ROM</string>
   <string name="internal_build">Intern Build</string>
   <string name="kernel_upgrade_link" />
   <string name="kernel_upgrade_version" />
+  <string name="later">Genstart senere</string>
   <string name="loading">Forbinder til MIUI</string>
   <string name="md5_check_cancelled">MD5 kontrol er annulleret</string>
-  <string name="mione_update_fail_description">Venligst gen-opdater</string>
+  <string name="mione_update_fail_description">Opdater venligst igen</string>
   <string name="mione_update_fail_title">System opdatering mislykkedes!</string>
-  <string name="mione_update_success_title">Opdatering fuldført</string>
+  <string name="mione_update_success_title">System opdatering fuldført</string>
   <string name="monthly_build">Månedlig Build</string>
-  <string name="move_data_to_sdcard_not_enough_space_message">Skal flytte ca. %d Mb, men der er ikke nok plads på SD-Kort.</string>
+  <string name="move_data_to_sdcard_not_enough_space_message">Ikke nok plads på SD-kort til at flytte de valgte %dMB data.</string>
   <string name="move_data_to_sdcard_title">Flyt data til SD-Kort</string>
-  <string name="moving_data_to_sdcard_message">Flytter data, fjern ikke SD-Kort</string>
-  <string name="moving_data_to_sdcard_progress_format">Fuldførte %1$d Kb af %2$d Kb</string>
+  <string name="moving_data_to_sdcard_message">"Data flyttes til SD-kort. Undgå venligst at aktivere USB tilstand eller fjerne SD-kort."</string>
+  <string name="moving_data_to_sdcard_progress_format">Fuldførte %1$dKb af %2$dKb</string>
   <string name="my_best_update">Bedste opdatering jeg valgte</string>
   <string name="my_expect_update">Forventninger jeg valgte</string>
-  <string name="my_rank">Opdatering rank:</string>
+  <string name="my_rank">Opdatering rang:</string>
   <string name="my_update_feel">Mine tanker</string>
   <string name="my_worst_update">Værste opdatering jeg valgte</string>
-  <string name="network_error">Kunne ikke forbinde, muligvis serverfejl eller netværksfejl</string>
+  <string name="network_error">Forbindelse til netværket fejlede. Prøv venligst igen</string>
   <string name="new_update_content_title">Fandt nye opdateringer!</string>
   <string name="new_update_download_complete_body">Ny version klar:%s</string>
   <string name="new_update_downloading_body">Downloader ny version:%s</string>
-  <string name="new_updates_found_notification_title">Ny system opdatering!</string>
+  <string name="new_updates_found_notification_title">Ny System Opdatering fundet!</string>
   <string name="new_updates_found_title">Ny opdatering...</string>
   <string name="next">Næste</string>
-  <string name="no_proper_updates">Ingen passende opdatering fundet</string>
+  <string name="no_proper_updates">Ingen opdateringer blev fundet til den nuværende installede version</string>
   <string name="no_updatecheck_executed">Kontrollerede ikke for opdateringer</string>
-  <string name="no_updates_found">Fandt ikke nye opdateringer</string>
-  <string name="no_updates_warning">Fandt ingen opdateringer</string>
-  <string name="no_updates_warning2">Fandt ingen opdateringer.. Igen!</string>
+  <string name="no_updates_found">Du har allerede den seneste version installeret</string>
+  <string name="no_updates_warning">Ingen opdateringer fundet</string>
+  <string name="no_updates_warning2">Applikationen vil underrette dig om fremtidige opdateringer</string>
   <string name="not_recommend">"Anbefal ikke"</string>
+  <string name="now">Genstart nu</string>
   <string name="paused_queued_for_network">Venter på dataforbindelse</string>
   <string name="paused_queued_for_wifi">Venter på Wi-Fi forbindelse</string>
   <string name="previous">Forrige</string>
   <string name="reboot_later">Genstart senere</string>
   <string name="reboot_now">Genstart nu</string>
-  <string name="reboot_to_new_system">Genstart system</string>
+  <string name="reboot_to_new_system">Genstart til ny version</string>
   <string name="recommend">Anbefal</string>
   <string name="recommend_comment_hint">Årsag (valgfrit)</string>
-  <string name="recommend_vote_title">MIUI Beta Team Poll</string>
+  <string name="recommend_vote_title">MIUI Beta Team meningsmåling</string>
   <string name="refuse_recommend_reason">Indtast en årsag</string>
-  <string name="sdcard_has_no_space_dialog_body">SD-Kortet har ikke tilstrækkelig plads.</string>
+  <string name="sdcard_has_no_space_dialog_body">SD-Kortet har ikke tilstrækkelig plads. Mere plads påkrævet til denne handling</string>
   <string name="sdcard_has_no_space_dialog_title">For lidt plads på SD-kort</string>
-  <string name="sdcard_is_not_present_dialog_body">Der skal være et SD-Kort tilstede for at downloade opdateringen</string>
-  <string name="sdcard_is_not_present_dialog_title">SD-Kort ikke fundet</string>
+  <string name="sdcard_is_not_present_dialog_body">Der skal være et SD-kort tilstede for at downloade opdateringen. Prøv venligst igen</string>
+  <string name="sdcard_is_not_present_dialog_title">SD-kort ikke fundet</string>
   <string name="send_install_log">Send installerings log</string>
   <string name="send_install_log_error">Afsending af log mislykkedes!</string>
   <string name="share">Del</string>
   <string name="share_qq">Post det via Tencent weibo</string>
   <string name="share_sina">Post det via Sina weibo</string>
   <string name="share_update">Del systemopdatering info</string>
-  <string name="share_update_content_sign">"Jeg har opdateret MIUI til %1$s! Min opdaterings bruger rang er %2$s. For detaljeret changelog, venligst gå til http://www.miui-au.com"</string>
-  <string name="share_update_content_unsign">"Jeg har opdateret MIUI til %s! For detaljeret changelog, venligst gå til http://www.miui-au.com"</string>
-  <string name="sign_in_add_account">Venligst aktiver din Xiaomi konto</string>
-  <string name="sign_in_add_account_helper">Din telefon har ikke konfigureret en MIUI konto</string>
-  <string name="sign_in_info">"Din opdateringsrang er %1$s
-%2$s brugere har opdateret til MIUI %3$s"</string>
-  <string name="sign_in_info_rank_more">"Din opdateringsrang er efter %1$s
-Over %2$s brugere har opdateret til MIUI %3$s"</string>
-  <string name="sign_in_info_total_more">"Din opdateringsrang er %1$s
-Over %2$s brugere har opdateret til MIUI %3$s"</string>
+  <string name="share_update_content_sign">Jeg har opdateret MIUI til %1$s! Min opdaterings brugerrang er %2$s. For detaljeret changelog, besøg venligst %3$s</string>
+  <string name="share_update_content_unsign">Jeg har opdateret MIUI til %1%s! For detaljeret changelog, besøg venligst %2$s</string>
+  <string name="sign_in_add_account">Aktiver venligst din Xiaomi konto</string>
+  <string name="sign_in_add_account_helper">Din telefon har ikke konfigureret en MIUI konto. Tilføj en for at modtage bruger point</string>
+  <string name="sign_in_info">"Din opdateringsrang er %1$s %2$s brugere har opdateret til MIUI %3$s"</string>
+  <string name="sign_in_info_rank_more">"Din opdateringsrang er efter %1$s Over %2$s brugere har opdateret til MIUI %3$s"</string>
+  <string name="sign_in_info_total_more">"Din opdateringsrang er %1$s Over %2$s brugere har opdateret til MIUI %3$s"</string>
+  <string name="sina_share_fail">Deling mislykkedes!</string>
+  <string name="sina_share_pendding">Deler...</string>
+  <string name="sina_share_success">Delt!</string>
+  <string name="sina_token_expired_warning">Weibo konto er udløbet. Forbind venligst igen</string>
+  <string name="sina_token_invalid_warning">Weibo konto er ugyldig. Forbind venligst igen</string>
   <string name="stable_build">Stabil Build</string>
   <string name="start_update">Begynd opdatering</string>
   <string name="submit">Indsend</string>
   <string name="submit_fail">Indsending mislykkedes</string>
   <string name="submit_progress">Indsender...</string>
   <string name="submit_success">Indsendt. Tak!</string>
-  <string name="system_backup_apply_helper">Telefon vil automatisk genstarte for at fuldføre opdateringen</string>
+  <string name="system_backup_apply_helper">Enheden vil automatisk genstarte for at fuldføre opdateringen</string>
   <string name="system_backup_ask">Spørg igen</string>
   <string name="system_backup_button_text">Udfør backup af systemet før opdatering</string>
   <string name="system_backup_cancel_text">Genstart for at opdatere</string>
-  <string name="system_backup_download_helper">Telefon vil automatisk genstarte for at fuldføre opdateringen efter endt download</string>
-  <string name="system_backup_error_message">MIUI backup ikke fundet. Venligst foretag backup manuelt</string>
+  <string name="system_backup_download_helper">Enheden vil automatisk genstarte for at fuldføre opdateringen efter endt download</string>
+  <string name="system_backup_error_message">MIUI backup ikke fundet. Foretag venligst backup manuelt</string>
   <string name="system_backup_helper">System opdatering sletter ikke brugerdata. Det anbefales dog at lave en backup inden opdatering</string>
   <string name="system_backup_ok_text">Backup</string>
   <string name="top_secret_build">Hemmelig build</string>
+  <string name="unstable_build">Unstabil Build</string>
   <string name="update_comment_hint">(valgfrit)</string>
   <string name="update_comment_title">Dine kommentarer</string>
-  <string name="update_feedback">Fire ledet opdateringsfeedback</string>
+  <string name="update_feedback">Four-grid opdateringsfeedback</string>
   <string name="update_feedback_expired">"Det var en skam du missede opdateringsfeedback! Venligst prøv at indsende igen næste tirsdag"</string>
   <string name="update_feel">1. Hvordan har du det?</string>
   <string name="update_general">Ikke dårligt</string>
   <string name="update_happy">Glad</string>
   <string name="update_monthly_build_only">Opdatering kun til månedlig Build</string>
   <string name="update_sad">Trist</string>
-  <string name="update_success">Opdatering fuldført</string>
+  <string name="update_success">Tillykke! Opdatering fuldført</string>
   <string name="update_success_body">System opdateret til %s</string>
-  <string name="update_success_title">Opdatering fuldført!</string>
+  <string name="update_success_title">Tillykke. Opdatering fuldført!</string>
+  <string name="updater_finish_download">ROM download fuldført</string>
   <string name="upgrade_close">Luk</string>
   <string name="upgrade_kernel">Nuværende kernel påkræver opdatering</string>
   <string name="upgrade_kernel_msg">"Nuværende kernel passer ikke overens med MIUI ROM. Du skal opdatere den manuelt. Venligs jævnfør opdateringsguiden:"</string>
-  <string name="verify_and_apply_dialog_message">MD5 signatur bliver checket</string>
-  <string name="verify_and_apply_dialog_title">Fil Verifikation lykkedes.</string>
-  <string name="view_install_log">Se Log</string>
+  <string name="verify_and_apply_dialog_message">MD5 signatur tjekkes...</string>
+  <string name="verify_and_apply_dialog_title">Fil Verifikation lykkedes</string>
+  <string name="view_install_log">Se fejllog</string>
   <string name="view_upgrade_tutorial">Se guiden</string>
   <string name="weekly_build">Ugentlig Build</string>
-  <string name="wifi_not_available_body">Dataforbindelse fundet, dog anbefales det at anvende Wi-Fi. Forstæt alligevel?</string>
+  <string name="wifi_not_available_body">Det anbefales at bruge Wi-Fi for at downloade opdateringer, da filstørrelser kan være store. Du benytter i øjeblikket ikke Wi-Fi. Ønsker du at fortsætte alligevel?</string>
   <string name="wifi_not_available_title">Wi-Fi ikke tilgængelig</string>
-  <string name="worst_update">Værste update</string>
+  <string name="worst_update">3. Værste opdatering</string>
 </resources>
